Ensure code blocks don't wrap on Safari

--- a/assets/css/_syntax.scss
+++ b/assets/css/_syntax.scss
@@ -9,6 +9,8 @@ pre.highlight {
 
   > code {
     white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
   }
 
   .lineno { padding: 0 15px 0 0; }
